--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.39",
-    "@codemirror/autocomplete": "^6.17.0",
-    "@codemirror/commands": "^6.6.0",
+    "@auth/drizzle-adapter": "^1.7.2",
+    "@codemirror/autocomplete": "^6.18.2",
+    "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-cpp": "^6.0.2",
-    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-css": "^6.3.0",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/lang-markdown": "^6.2.5",
+    "@codemirror/lang-markdown": "^6.3.0",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/lang-sass": "^6.0.2",
     "@codemirror/lang-wast": "^6.0.2",
-    "@codemirror/language": "^6.10.2",
-    "@codemirror/search": "^6.5.6",
+    "@codemirror/language": "^6.10.3",
+    "@codemirror/search": "^6.5.7",
     "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.28.4",
+    "@codemirror/view": "^6.34.1",
     "@hookform/resolvers": "^3.9.1",
-    "@lezer/highlight": "^1.2.0",
-    "@nanostores/react": "^0.7.2",
+    "@lezer/highlight": "^1.2.1",
+    "@nanostores/react": "^0.7.3",
+    "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -56,35 +58,40 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@uiw/codemirror-theme-vscode": "^4.23.0",
+    "@uiw/codemirror-theme-vscode": "^4.23.6",
     "@webcontainer/api": "1.3.0-internal.10",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
-    "ai": "^3.3.4",
+    "ai": "^3.4.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "diff": "^5.2.0",
-    "framer-motion": "^11.2.12",
-    "isbot": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.0",
+    "framer-motion": "^11.11.11",
+    "isbot": "^4.4.0",
     "istextorbinary": "^9.5.0",
-    "jose": "^5.6.3",
+    "jose": "^5.9.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "nanostores": "^0.10.3",
     "next": "15.0.2",
+    "next-auth": "5.0.0-beta.25",
+    "next-safe-action": "^7.9.9",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.53.1",
-    "react-hotkeys-hook": "^4.5.0",
+    "react-hotkeys-hook": "^4.6.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.6",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "shiki": "^1.9.1",
+    "shiki": "^1.22.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -94,24 +101,26 @@
   },
   "devDependencies": {
     "@blitz/eslint-plugin": "0.1.0",
-    "@cloudflare/workers-types": "^4.20240620.0",
-    "@types/diff": "^5.2.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@cloudflare/workers-types": "^4.20241022.0",
+    "@types/diff": "^5.2.3",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^20.17.5",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "drizzle-kit": "^0.27.1",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.2",
     "fast-glob": "^3.3.2",
     "is-ci": "^3.0.1",
     "node-fetch": "^3.3.2",
-    "postcss": "^8",
-    "prettier": "^3.3.2",
-    "sass": "^1.80.5",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "sass": "^1.80.6",
     "sass-embedded": "1.80.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
     "unified": "^11.0.5",
-    "wrangler": "^3.63.2",
+    "wrangler": "^3.84.1",
     "zod": "^3.23.8"
   }
 }
